generic_ui/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ad-hoc-analytics-ui
spec:
  selector:
    matchLabels:
      app: ad-hoc-analytics-ui
  replicas: 1
  template:
    metadata:
      labels:
        name: ad-hoc-analytics-ui
        app: ad-hoc-analytics-ui
    spec:
      containers:
      - name: ad-hoc-analytics-ui
        image: ad-hoc-analytics-ui-image
        ports:
          - containerPort: 4200
            livenessProbe:
              httpGet:
                path: /
                port: 4200
              initialDelaySeconds: 10
              periodSeconds: 30
              timeoutSeconds: 1
              failureThreshold: 3
              readinessProbe:
                httpGet:
                  path: /
                  port: 4200
                initialDelaySeconds: 10
                periodSeconds: 30
                timeoutSeconds: 1
                failureThreshold: 3
        resources:
          requests:
            cpu: "250m"
