generic_ui/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: ad-hoc-analytics-ui
spec:
    type: ClusterIP
    selector:
        name: ad-hoc-analytics-ui
    ports:
    - protocol: TCP
      port: 80
      targetPort: 4200
