generic_ui/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ad-hoc-analytics-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/app-root: /ui/
spec:
  ingressClassName: nginx
  type: ClusterIP
  rules:
  - host: ad-hoc.localhost
    http:
      paths:
      - path: /ui/
        pathType: Prefix
        backend:
          service:
            name: ad-hoc-analytics-ui
            port:
              number: 80
